src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>BlueChoice_PPO_Lab_Conversion_Factor__c</fullName>
        <label>BlueChoice PPO Lab Conversion Factor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueLincs_HMO_Lab_Conversion_Factor__c</fullName>
        <label>BlueLincs HMO Lab Conversion Factor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueLincs_HMO_SNF_Max_Per_Diem__c</fullName>
        <label>BlueLincs HMO SNF Max Per Diem</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BluePref_Pwr_Mobility_3_4_5_of_billed__c</fullName>
        <label>BluePref Pwr Mobility 3,4,5 % of billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BluePreferred_PPO_Lab_Conversion_Factor__c</fullName>
        <label>BluePreferred PPO Lab Conversion Factor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueTrad_Choice_Pref_SNF_Max_Per_Diem__c</fullName>
        <label>BlueTrad,Choice,Pref SNF Max Per Diem</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Advantage_MO_Power_Mobility_3_4_5__c</fullName>
        <label>BlueAdv Power Mobility 3,4,5 % of billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blue_Advantage_PPO_Lab_Conversion_Factor__c</fullName>
        <label>Blue Advantage PPO Lab Conversion Factor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Advantage_PPO_SNF_Max_Per_Diem__c</fullName>
        <label>Blue Advantage PPO SNF Max Per Diem</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Choice_Methodology__c</fullName>
        <label>Blue Choice Methodology</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Choice_Opts_Methodology__c</fullName>
        <label>Blue Choice Opts Methodology</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Choice_Opts_of_Billed_Chges_for_C__c</fullName>
        <label>Blue Choice Opts % Billed Chges Cvd Svcs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Choice_of_Billed_Chges_for_Cvd_Sv__c</fullName>
        <label>Blue Choice % of Billed Chges for Cvd Sv</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Community_Power_Mobility_3_4_5_perc__c</fullName>
        <label>BlueComm Pwr Mobility 3,4,5 % of billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blue_Ess_and_Health_Select_same_rates__c</fullName>
        <label>Blue Ess. and Health Select: same rates?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Blue Ess. and Health Select share rates</fullName>
                </value>
                <value>
                    <fullName>No, Blue Ess. and Health Select have differing rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blue_Focus_Percent_Discount__c</fullName>
        <label>Blue Focus Percent Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blue_Options_Percent_Discount__c</fullName>
        <label>Blue Options Percent Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blue_Preferred_Power_Mobility_3_4_5_perc__c</fullName>
        <label>BluePref Pwr Mobility 3,4,5 % of billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blue_Salud__c</fullName>
        <label>Blue Salud/Blue SCI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_Traditional_Lab_Conversion_Factor__c</fullName>
        <label>Blue Traditional Lab Conversion Factor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broad_PPO_Methodology__c</fullName>
        <label>Broad PPO Methodology</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broad_PPO_of_Billed_Chges_for_Cvd_Svcs__c</fullName>
        <label>Broad PPO % of Billed Chges for Cvd Svcs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Agr_E_Signature_Status__c</fullName>
        <label>E-Signature Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BlueAdvantagePpoSnfMaxPerDiem__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BlueAdvantagePpoSnfMaxPerDiem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BlueChoicePpoLabConversionFac__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BlueChoicePpoLabConversionFac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BlueLincsHmoLabConversionFact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BlueLincsHmoLabConversionFac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BlueLincsHmoSnfMaxPerDiem__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BlueLincsHmoSnfMaxPerDiem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BluePreferredPpoLabConverFac__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BluePreferredPpoLabConverFac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BlueTradChoicePrefSnfMaxPer__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BlueTradChoicePrefSnfMaxPer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_BlueTraditionalLabConverFacto__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_BlueTraditionalLabConverFac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_DmePurchasePreAuthCapAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_DmePurchasePreAuthCapAmount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_DmeRentalFeePreAuthCapAmoun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_DmeRentalFeePreAuthCapAmoun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_MaHmoLesserOfCovered__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_MaHmoLesserOf%OfCovered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_MaHmoLesserOfMedicAllo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_MaHmoLesserOf%OfMedicAllo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_MaPpoLesserOfCovered__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_MaPpoLesserOf%OfCovered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_MaPpoLesserOfMedicareAl__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_MaPpoLesserOf%OfMedicareAl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_PercentCoveredCharges__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field Created to bypass the validation rule on percent covered charges field when we want to default the field value to 100</description>
        <label>CLM_Bypass_PercentCoveredCharges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_PercentofMedicaidFeeSchedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created in order for the CLM_Reimburement trigger to default the value before the condition for the validation rule on the field % of medicaid fee schedule is met</description>
        <label>CLM_Bypass_PercentofMedicaidFeeSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_PpoLabConversionFactor__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_PpoLabConversionFactor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Bypass_RbrvsPublicationLocation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to help us bypass the validation rule until the auto populated value is removed from the field</description>
        <label>CLM_Bypass_RbrvsPublicationLocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Error_Condition__c</fullName>
        <formula>AND(OR(TEXT( Plan__c)==&quot;Illinois&quot; , TEXT( Plan__c)==&quot;Texas&quot; , TEXT( Plan__c)==&quot;Montana&quot;), OR (APTS_Record_Type_Name__c=&quot;Professional&quot;, APTS_Record_Type_Name__c=&quot;Medical Group&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Identification_Number__c</fullName>
        <formula>CLM_Provider_Iden_Info__r.CM_Issu_Ident_Nmbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Identification_Type__c</fullName>
        <formula>TEXT(CLM_Provider_Iden_Info__r.CM_Prvdr_Iden_Typ_Cd__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM Identification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Medicare_Number_using_Prov_ID__c</fullName>
        <formula>CLM_Medicare_Provider_Identification__r.CM_Issu_Ident_Nmbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM Medicare Number using Prov ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Medicare_Provider_Identification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLM Medicare Provider Identification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Apttus__Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Identification__c.CM_PI_Prov__c</valueField>
            </filterItems>
            <filterItems>
                <field>CM_Provider_Identification__c.CM_Prvdr_Iden_Typ_Cd__c</field>
                <operation>equals</operation>
                <value>Medicare</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreements (CLM Medicare Provider Identification)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_NPI_List_Type__c</fullName>
        <label>NPI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_NPI_Type__c</fullName>
        <formula>CLM_Provider_Iden_Info__r.CM_PI_NPI_Type_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_NPI__c</fullName>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Non_Error_Condition__c</fullName>
        <formula>OR(TEXT(Plan__c)=&quot;New Mexico&quot; , TEXT(Plan__c)=&quot;Oklahoma&quot; , AND (TEXT(Plan__c)=&quot;Montana&quot; ,APTS_Record_Type_Name__c&lt;&gt;&quot;Medical Group&quot; , APTS_Record_Type_Name__c&lt;&gt;&quot;Professional&quot;),AND (TEXT(Plan__c)=&quot;Texas&quot; ,APTS_Record_Type_Name__c&lt;&gt;&quot;Medical Group&quot; , APTS_Record_Type_Name__c&lt;&gt;&quot;Professional&quot;) , AND (TEXT(Plan__c)=&quot;Illinois&quot; , APTS_Record_Type_Name__c&lt;&gt;&quot;Medical Group&quot; , APTS_Record_Type_Name__c&lt;&gt;&quot;Professional&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Error Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Other_Prov_ID_Search__c</fullName>
        <formula>AND(OR(TEXT(Plan__c)=&quot;New Mexico&quot; , TEXT(Plan__c)=&quot;Oklahoma&quot; , TEXT(Plan__c)=&quot;Montana&quot;,TEXT(Plan__c)=&quot;Texas&quot; ,TEXT(Plan__c)=&quot;Illinois&quot; ), APTS_Record_Type_Name__c=&quot;Facility&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Prov ID Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_PlanSpecificPFIN__c</fullName>
        <formula>OR(TEXT(Plan__c)=&quot;New Mexico&quot; , TEXT(Plan__c)=&quot;Oklahoma&quot; , TEXT(Plan__c)=&quot;Montana&quot;, TEXT(Plan__c)=&quot;Illinois&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlanSpecificPFIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Provider_ID_Txt__c</fullName>
        <label>Provider ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Provider_Id__c</fullName>
        <formula>Apttus__Account__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Provider_Iden_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter/Select Identification Number</inlineHelpText>
        <label>CLM Provider Identification Info</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Apttus__Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Identification__c.CM_PI_Prov__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreements (CLM Identification Number)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Select_Locations__c</fullName>
        <formula>IF (true, HYPERLINK(&quot;/apex/CLM_LocationSearch?id=&quot;&amp;Id , IMAGE(&quot;/resource/Select_Locations&quot;, &quot;Select Locations&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Locations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Standard_or_Non_Standard_Base_Lan__c</fullName>
        <label>Standard or Non Standard Base Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Tx_City_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is just created to be used in the apex class CLM_Texas_ReimbursementHandler in order to default the values of mediation city and arbitration city in TX plan</description>
        <label>CLM_Tx_City_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carve_Out_in_Lesser_Of__c</fullName>
        <label>Carve Out in Lesser Of</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>are</fullName>
                </value>
                <value>
                    <fullName>are not</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Master_Max_Increase_percent__c</fullName>
        <label>Charge Master Max Increase percent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one percent (1%)</fullName>
                </value>
                <value>
                    <fullName>two percent (2%)</fullName>
                </value>
                <value>
                    <fullName>three percent (3%)</fullName>
                </value>
                <value>
                    <fullName>four percent (4%)</fullName>
                </value>
                <value>
                    <fullName>five percent (5%)</fullName>
                </value>
                <value>
                    <fullName>six percent (6%)</fullName>
                </value>
                <value>
                    <fullName>seven percent (7%)</fullName>
                </value>
                <value>
                    <fullName>eight percent (8%)</fullName>
                </value>
                <value>
                    <fullName>nine percent (9%)</fullName>
                </value>
                <value>
                    <fullName>ten percent (10%)</fullName>
                </value>
                <value>
                    <fullName>zero percent (0%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Master_Reminder_Date__c</fullName>
        <label>Charge Master Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Plan_Percent_Discount__c</fullName>
        <label>Closed Plan Percent Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complete_Delivery_Rate__c</fullName>
        <label>Complete Delivery Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DME_Purchase_pre_auth_cap_amount__c</fullName>
        <label>DME Purchase pre-auth cap amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Provider_Service_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DME_Rental_Fee_pre_auth_cap_amount__c</fullName>
        <label>DME Rental Fee pre-auth cap amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>four thousand dollars ($4,000.00)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRG_Grouper_Type__c</fullName>
        <label>DRG Grouper Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>APR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRG_Grouper_Version__c</fullName>
        <label>DRG Grouper Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_only_of_createdDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date only of createdDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Preference__c</fullName>
        <label>Delivery Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Determination_of_Allowed_Amnts_Dollars__c</fullName>
        <label>Determination of Allowed Amnts(Dollars)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Determination_of_Allowed_Amnts_Percent__c</fullName>
        <description>For Dialysis- 60% is the default rate and these are collected for Case Rates.
For Home Health-This is for Charge Schedule increases</description>
        <label>Determination of Allowed Amnts(Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Determination_of_Allowed_Amounts__c</fullName>
        <label>Determination of Allowed Amnts(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Does_DRG_cap_apply__c</fullName>
        <label>Does DRG cap apply?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar_of_increase_per_year__c</fullName>
        <label>Dollar of increase per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dual_Eligible_Attachment_Effective_Date__c</fullName>
        <label>Dual Eligible Attachment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_same_Comp_Method_High_Low__c</fullName>
        <label>ER same Comp Method High/Low</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>highest</fullName>
                </value>
                <value>
                    <fullName>lowest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subject_text__c</fullName>
        <formula>CLM_Provider_Id__c+&quot; &quot;+ Apttus__FF_Agreement_Number__c+&quot; &quot;+ Apttus__Account__r.Name +&quot; &quot;+Apttus__Account__r.FirstName+ &quot; &quot; + Apttus__Account__r.MiddleName + &quot; &quot; + Apttus__Account__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subject text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Services_Per_Treatment_Amount__c</fullName>
        <label>Excluded Services Per Treatment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_Date__c</fullName>
        <label>Fee Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <description>Name of the footer field has been changed to Left footer, in order to remove the confusion between what is footer and right footer for footer story, PPN -32607</description>
        <label>Left Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_13_Multiplier__c</fullName>
        <label>Group 13 Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HHRF_Duration_End_Date__c</fullName>
        <label>HHRF Duration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HHRF_Effective_Date__c</fullName>
        <label>HHRF Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HMO_1st_Charge_Schedule_Increase_Cap__c</fullName>
        <inlineHelpText>&quot;zero percent (0%)&quot;</inlineHelpText>
        <label>HMO 1st Charge Schedule Increase Cap %</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMO_2nd_Charge_Schedule_Increase_Cap__c</fullName>
        <label>HMO 2nd Charge Schedule Increase Cap %</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMO_3rd_Charge_Schedule_Increase_Cap__c</fullName>
        <label>HMO 3rd Charge Schedule Increase Cap %</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMO_Attachment_Effective_Date__c</fullName>
        <label>HMO Attachment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HMO_Methodology__c</fullName>
        <label>HMO Methodology</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMO_of_Billed_Chges_for_Cvd_Svcs__c</fullName>
        <label>HMO % of Billed Chges for Cvd Svcs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthLink_Percent_Discount__c</fullName>
        <label>HealthLink Percent Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICR__c</fullName>
        <label>ICR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IP_Max_Reimbursement_Allowance_Per_Diem__c</fullName>
        <label>IP Max Reimbursement Allowance  Per Diem</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implant_Prosthetic_per_rev_code_maximum__c</fullName>
        <label>Implant Prosthetic per rev code maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inflator_Review_Date__c</fullName>
        <label>Inflator Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Dual_Eligible_Attach_term_mnths__c</fullName>
        <label>Initial Dual Eligible Attach term mnths</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one (1) month</fullName>
                </value>
                <value>
                    <fullName>two (2) months</fullName>
                </value>
                <value>
                    <fullName>three (3) months</fullName>
                </value>
                <value>
                    <fullName>four (4) months</fullName>
                </value>
                <value>
                    <fullName>five (5) months</fullName>
                </value>
                <value>
                    <fullName>six (6) months</fullName>
                </value>
                <value>
                    <fullName>seven (7) months</fullName>
                </value>
                <value>
                    <fullName>eight (8) months</fullName>
                </value>
                <value>
                    <fullName>nine (9) months</fullName>
                </value>
                <value>
                    <fullName>ten (10) months</fullName>
                </value>
                <value>
                    <fullName>eleven (11) months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Dual_Eligible_Attach_term_yrs__c</fullName>
        <label>Initial Dual Eligible Attach term yrs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one (1) year</fullName>
                </value>
                <value>
                    <fullName>two (2) years</fullName>
                </value>
                <value>
                    <fullName>three (3) years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Dual_Eligible_Attachment_term_mo__c</fullName>
        <label>Initial Dual Eligible Attach term months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one (1) month</fullName>
                </value>
                <value>
                    <fullName>two (2) months</fullName>
                </value>
                <value>
                    <fullName>three (3) months</fullName>
                </value>
                <value>
                    <fullName>four (4) months</fullName>
                </value>
                <value>
                    <fullName>five (5) months</fullName>
                </value>
                <value>
                    <fullName>six (6) months</fullName>
                </value>
                <value>
                    <fullName>seven (7) months</fullName>
                </value>
                <value>
                    <fullName>eight (8) months</fullName>
                </value>
                <value>
                    <fullName>nine (9) months</fullName>
                </value>
                <value>
                    <fullName>ten (10) months</fullName>
                </value>
                <value>
                    <fullName>eleven (11) months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Dual_Eligible_Attachment_term_ye__c</fullName>
        <label>Initial Dual Eligible Attachment term ye</label>
        <type>Date</type>
    </fields>
</CustomObject>